@@ -196,6 +196,7 @@ package SPVM::CORE {
   native sub reversel : void ($nums : long[]);
   native sub reversef : void ($nums : float[]);
   native sub reversed : void ($nums : double[]);
+  native sub reverseo : void ($nums : oarray);
   
   native sub sortb : void ($nums : byte[]);
   native sub sorts : void ($nums : short[]);
