@@ -21,6 +21,7 @@
   - add reversel core function
   - add reversef core function
   - add reversed core function
+  - add reverseo core function
   - add sliceb core function
   - add slices core function
   - add slicei core function
